# VideoLab

./: .gitignore  CMakeLists.txt  README.md  dependencies.json  vcpkg.json
.github/workflows/: main.yml
datas/: Videos  test.aac
src/: CMakeLists.txt  GlobalRoute.cpp  GlobalRoute.h  main.cpp
src/FileInfo/: FileInfo.cpp  FileInfo.h
src/MemMonitor/: MemCommandHandler.cpp  MemCommandHandler.h  MemMonitor.cpp  MemMonitor.h
src/core/: ffmpeg.cpp
src/encode/: vp8_param_test.cpp  vp8_param_test.hpp  x264_param_test.cpp  x264_param_test.hpp  x265_param_test.cpp
src/ffmpeg/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  encoder_test.cpp  encoder_test.hpp  ffmpeg.hpp  videofilter.cpp  videofilter.hpp  x264_param_test.cpp  x264_param_test.hpp  x265_param_test.cpp  x265_param_test.hpp
src/filter/: videofilter.hpp
src/format/: aac_parser.cpp  aac_parser.hpp  analyzer.hpp  h264_parser.cpp  h264_parser.hpp  mp4_parser.cpp  mp4_parser.hpp
src/io/: asio.hpp
src/modern/: stringprocess.hpp  testnewfeature.hpp
src/mp4/: mp4_parser.cpp  mp4_parser.hpp
src/patterns/: adapter.hpp  chain.hpp  command.hpp  composite.hpp  facade.hpp  observer.hpp  state.hpp  strategy.hpp
src/template/: template.hpp
src/threads/: async.hpp  fiber.hpp  signalslot.cpp  signalslot.hpp  thread.hpp
src/ui/: CMakeLists.txt  aac_config_window.cpp  aac_config_window.hpp  aac_frame_view.cpp  aac_frame_view.hpp  h264_config_window.cpp  h264_config_window.hpp  h264_matrix_view.cpp  h264_matrix_view.hpp  main_window.cpp  main_window.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow_test.cpp  mainwindow_test.hpp  mp4_box_view.cpp  mp4_box_view.hpp  mp4_config_window.cpp  mp4_config_window.hpp  vlc_player_window.cpp  vlc_player_window.hpp  vp8_config_window.cpp  vp8_config_window.hpp  x264_config_window.cpp  x264_config_window.hpp
src/utils/: timezone.hpp
src/x264/: x264_param_test.hpp
src/x265/: x265_param_test.hpp
